# v8-6.8.275.32

./: README.md  v8_fetch_and_build.sh
devel_gn/: fetch.sh
devel_py-Jinja2/: Makefile  Makefile.2.11.2  distinfo
patches/: patch-BUILD.gn  patch-build_config_BUILD.gn  patch-build_config_BUILDCONFIG.gn  patch-build_config_compiler_BUILD.gn  patch-build_config_compiler_compiler.gni  patch-build_config_features.gni  patch-build_config_freetype_freetype.gni  patch-build_config_linux_pkg-config.py  patch-build_config_sysroot.gni  patch-build_gn_run_binary.py  patch-build_linux_libpci_BUILD.gn  patch-build_linux_unbundle_replace_gn_files.py  patch-build_toolchain_gcc_toolchain.gni  patch-build_toolchain_get_concurrent_links.py  patch-build_toolchain_linux_BUILD.gn  patch-buildtools_third_party_libc++_BUILD.gn  patch-src_base_cpu.cc  patch-src_base_platform_platform-freebsd.cc  patch-src_base_platform_platform-posix.cc  patch-src_d8-posix.cc  patch-src_libsampler_sampler.cc  patches-build_config_linux_BUILD.gn
textproc_py-markupsafe/: Makefile  distinfo
