--- BUILD.gn.orig	2018-08-28 22:00:10.000000000 +0200
+++ BUILD.gn	2021-12-17 09:04:30.181677000 +0100
@@ -2529,7 +2529,7 @@ v8_source_set("v8_base") {
       "src/x64/simulator-x64.h",
       "src/x64/sse-instr.h",
     ]
-    if (is_linux) {
+    if (is_linux &&!is_bsd) {
       sources += [
         "src/trap-handler/handler-inside-linux.cc",
         "src/trap-handler/handler-outside-linux.cc",
@@ -2875,7 +2875,7 @@ v8_component("v8_libbase") {
     }
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
       "src/base/platform/platform-linux.cc",
@@ -2895,6 +2895,12 @@ v8_component("v8_libbase") {
       "dl",
       "rt",
     ]
+  } else if (is_bsd) {
+    sources += [
+      "src/base/debug/stack_trace_posix.cc",
+      "src/base/platform/platform-freebsd.cc",
+    ]
+    libs = [ "rt", "execinfo" ]
   } else if (is_android) {
     if (current_toolchain == host_toolchain) {
       libs = [
@@ -3245,6 +3251,7 @@ if (is_component_build) {
       ":v8_base",
       ":v8_maybe_snapshot",
     ]
+#    libs = ["execinfo"]
 
     if (v8_use_snapshot) {
       public_deps += [ ":v8_initializers" ]
