--- build/config/sysroot.gni.orig	2021-12-16 22:49:58.000000000 +0100
+++ build/config/sysroot.gni	2021-12-16 22:55:02.450492000 +0100
@@ -15,9 +15,9 @@ declare_args() {
   # The absolute path to directory containing linux sysroot images
   target_sysroot_dir = "//build/linux"
 
-  use_sysroot = current_cpu == "x86" || current_cpu == "x64" ||
+  use_sysroot = !is_bsd && (current_cpu == "x86" || current_cpu == "x64" ||
                 current_cpu == "arm" || current_cpu == "arm64" ||
-                current_cpu == "mipsel" || current_cpu == "mips64el"
+                current_cpu == "mipsel" || current_cpu == "mips64el")
 }
 
 if (current_os == target_os && current_cpu == target_cpu &&
